# VMPacker

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.test  Dockerfile.x86_64  HMODE.md  Makefile  README.md  README_CN.md  build-x86_64-docker.sh  debug_demo.sh  docker-test.sh  gdb_script  go.mod  rebuild-and-test.sh  rebuild-stub.sh  run-demo.sh  run-gui.sh  run-tests-docker.sh  test_flags.c  work.md  x86_64 support plan.md
demo/: Makefile-demo  demo_all_insn.c  demo_chain_crypt.c  demo_complex  demo_complex.c  demo_crc.c  demo_crc_reject.c  demo_func_split.c  demo_hybrid_debug.c  demo_hybrid_license.c  demo_hybrid_multiple  demo_hybrid_multiple.c  demo_indirect_dispatch.c  demo_insn_add_ext.c  demo_insn_br_reg.c  demo_insn_eor_shifted.c  demo_insn_extr.c  demo_insn_halt.c  demo_insn_ldr_literal.c  demo_insn_ldrh.c  demo_insn_ldrsb.c  demo_insn_ldrsh.c  demo_insn_ldrsw.c  demo_insn_madd.c  demo_insn_ror.c  demo_insn_strb_pre.c  demo_insn_strh.c  demo_insn_stur_call.c  demo_insn_ubfm.c  demo_insn_umulh.c  demo_ldadd_basic.c  demo_ldr_reg.c  demo_license.c  demo_memcrc.c  demo_mini  demo_mini.c  demo_mrs_udiv.c  demo_ror32.c  demo_sdiv_ldst.c  demo_security.c  (+12 more)
docs/: Android_Test.md  BUILD_ARM32.md  ISA.md  RUNTIME_SECURITY.md  layout.md
scratch/: check_op_table.go  check_order.go  check_sizes.go  check_strings.go  dec.go  disasm.go  objdump.txt  print_elf.go  print_isa.go  print_isa_full.go  test_isa.go  test_isa2.go  test_plt.go  test_syms.go  test_syms2.go  test_syms3.go  test_syms4.go
test/android/jni/: CMakeLists.txt  native_bridge.c  native_test.c  test_runner.c
(+178 files in other folders)
